Updating to JDK 22