@@ -18,6 +18,7 @@ package overrungl.internal;
 
 import org.jetbrains.annotations.Nullable;
 import overrungl.FunctionDescriptors;
+import overrungl.NativeType;
 import overrungl.os.Architecture;
 import overrungl.os.Platform;
 import overrungl.util.MemoryUtil;
@@ -26,12 +27,13 @@ import java.io.File;
 import java.lang.foreign.*;
 import java.lang.invoke.MethodHandle;
 import java.net.URI;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Function;
+import java.util.function.ToLongFunction;
 
 import static java.lang.foreign.ValueLayout.*;
 
@@ -50,8 +52,12 @@ public final class RuntimeHelper {
     /**
      * An unbounded address layout.
      */
-    public static final AddressLayout ADDRESS_UNBOUNDED = MemoryUtil.ADDRESS_UNBOUNDED;
+    public static final AddressLayout ADDRESS_UNBOUNDED = ADDRESS.withTargetLayout(MemoryLayout.sequenceLayout(Long.MAX_VALUE, JAVA_BYTE));
     private static final StackWalker STACK_WALKER = StackWalker.getInstance(StackWalker.Option.RETAIN_CLASS_REFERENCE);
+    private static final Map<String, MemoryLayout> CANONICAL_LAYOUTS = LINKER.canonicalLayouts();
+    public static final MemoryLayout LONG = CANONICAL_LAYOUTS.get("long"),
+        SIZE_T = CANONICAL_LAYOUTS.get("size_t"),
+        WCHAR_T = CANONICAL_LAYOUTS.get("wchar_t");
 
     /**
      * constructor
@@ -60,53 +66,40 @@ public final class RuntimeHelper {
         throw new IllegalStateException("Do not construct instance");
     }
 
-    @Deprecated(since = "22")
-    public static MemorySegment allocateUtf16LEString(SegmentAllocator allocator, String str) {
-        Objects.requireNonNull(allocator);
-        Objects.requireNonNull(str);
-        final byte[] bytes = str.getBytes(StandardCharsets.UTF_16LE);
-        final MemorySegment seg = allocator.allocate(bytes.length + 2);
-        MemorySegment.copy(bytes, 0, seg, JAVA_BYTE, 0, bytes.length);
-        return seg;
-    }
-
-    @Deprecated(since = "22")
-    public static String getUtf16LEString(MemorySegment segment, long offset) {
-        long len = strlen(segment, offset);
-        byte[] bytes = new byte[(int) len];
-        MemorySegment.copy(segment, JAVA_BYTE, offset, bytes, 0, (int) len);
-        return new String(bytes, StandardCharsets.UTF_16LE);
-    }
-
-    private static int strlen(MemorySegment segment, long start) {
-        for (int offset = 0; offset >= 0; offset += 2) {
-            short curr = segment.get(JAVA_SHORT, start + offset);
-            if (curr == 0) {
-                return offset;
-            }
-        }
-        throw new IllegalArgumentException("String too large");
+    private static MemorySegment reinterpreting(MemorySegment pointerToPointer, int index, ToLongFunction<MemorySegment> size) {
+        final MemorySegment seg = pointerToPointer.getAtIndex(ADDRESS, index);
+        return seg.reinterpret(size.applyAsLong(seg));
     }
 
     /**
-     * Gets a string from the given pointer of a string.
+     * Gets a UTF-8 string from the given pointer of a string.
      *
      * @param segment the memory segment.
      * @return the string.
      */
     public static String unboundPointerString(MemorySegment segment) {
-        return segment.get(ADDRESS_UNBOUNDED, 0).getUtf8String(0);
+        return reinterpreting(segment, 0, MemoryUtil::strlen).getString(0);
     }
 
     /**
-     * Gets a string from the given pointer of a string at the given index.
+     * Gets a UTF-8 string from the given pointer of a string at the given index.
      *
      * @param segment the memory segment.
      * @param index   the index.
      * @return the string.
      */
     public static String unboundPointerString(MemorySegment segment, int index) {
-        return segment.getAtIndex(ADDRESS_UNBOUNDED, index).getUtf8String(0);
+        return reinterpreting(segment, index, MemoryUtil::strlen).getString(0);
+    }
+
+    /**
+     * Converts the segment into a string.
+     *
+     * @param segment the segment
+     * @return the string
+     */
+    public static String getString(MemorySegment segment) {
+        return segment.reinterpret(MemoryUtil.strlen(segment)).getString(0);
     }
 
     /**
@@ -194,7 +187,7 @@ public final class RuntimeHelper {
      * @param segment the segment.
      */
     public static boolean isNullptr(@Nullable MemorySegment segment) {
-        return MemoryUtil.isNullptr(segment);
+        return segment == null || segment.equals(MemorySegment.NULL);
     }
 
     /**
@@ -265,23 +258,6 @@ public final class RuntimeHelper {
     }
 
     /**
-     * Gets the objects from an address array.
-     *
-     * @param <T>       the array type
-     * @param seg       the memory segment contained objects. native type: {@code void**}
-     * @param arr       the array to hold the result
-     * @param generator the generator, from an unbounded address to the array type
-     * @return arr
-     */
-    public static <T> T[] toUnboundedArray(MemorySegment seg, T[] arr,
-                                           Function<MemorySegment, T> generator) {
-        for (int i = 0; i < arr.length; i++) {
-            arr[i] = generator.apply(seg.getAtIndex(ADDRESS_UNBOUNDED, i));
-        }
-        return arr;
-    }
-
-    /**
      * Gets the addresses from an address array.
      *
      * @param seg the memory segment contained addresses. native type: {@code void**}
@@ -299,8 +275,11 @@ public final class RuntimeHelper {
      * @param arr the array to hold the result
      * @return arr
      */
-    public static String[] toUnboundedArray(MemorySegment seg, String[] arr) {
-        return toUnboundedArray(seg, arr, p -> p.getUtf8String(0));
+    public static String[] toUnboundedArray(@NativeType("const char* const* const") MemorySegment seg, String[] arr) {
+        for (int i = 0; i < arr.length; i++) {
+            arr[i] = unboundPointerString(seg, i);
+        }
+        return arr;
     }
 
     /**
