@@ -56,7 +56,7 @@ final class GLExtFinder {
             }
             for (int index = 0; index < numExtsI; index++) {
                 var glStrTmp = GL30C.getStringi(GL10C.EXTENSIONS, index);
-                extsI.setAtIndex(ADDRESS, index, allocator.allocateUtf8String(glStrTmp));
+                extsI.setAtIndex(ADDRESS, index, allocator.allocateFrom(glStrTmp));
             }
             outNumExtsI.set(JAVA_INT, 0, numExtsI);
             outExtsI[0] = extsI;
